test/conformance/chainsaw/mutate/clusterpolicy/standard/mutate-node-status/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: advertise-resource
spec:
  admission: true
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Node/status
    mutate:
      patchesJson6902: |-
        - op: add
          path: "/status/capacity/example.com~1dongle"
          value: "4"
    name: advertise-resource
  validationFailureAction: Audit
