test/conformance/chainsaw/mutate/clusterpolicy/standard/mutate-node-status/02-assert.yaml
apiVersion: v1
kind: Node
metadata:
  name: kind-control-plane
status:
  capacity:
    example.com/dongle: "4"
