test/conformance/chainsaw/mutate/clusterpolicy/standard/mutate-node-status/chainsaw-step-01-assert-1-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: advertise-resource
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
