test/conformance/chainsaw/mutate/clusterpolicy/standard/mutate-node-status/chainsaw-step-02-assert-1-1.yaml
apiVersion: v1
kind: Node
metadata:
  name: kind-control-plane
status:
  capacity:
    example.com/dongle: "4"
