test/conformance/chainsaw/mutate/clusterpolicy/standard/mutate-node-status/02-script.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: script
spec:
  timeouts: {}
  try:
  - script:
      content: ./modify-resource-filters.sh removeNode
  - script:
      content: ./send-request-to-status-subresource.sh
