test/conformance/chainsaw/mutate/clusterpolicy/standard/mutate-node-status/99-cleanup.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: cleanup
spec:
  timeouts: {}
  try:
  - command:
      args:
      - delete
      - cpol
      - advertise-resource
      - --force
      - --wait=true
      - --ignore-not-found=true
      entrypoint: kubectl
  - script:
      content: ./modify-resource-filters.sh addNode
  - script:
      content: ./clear-modified-node-status.sh
    timeout: 20s
