test/conformance/chainsaw/mutate/clusterpolicy/standard/mutate-node-status/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-node-status
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: advertise-resource
  - name: step-02
    try:
    - script:
        content: ./modify-resource-filters.sh removeNode
        timeout: 30s
    - script:
        content: ./send-request-to-status-subresource.sh
        timeout: 30s
    - assert:
        file: chainsaw-step-02-assert-1-1.yaml
  - name: step-99
    try:
    - command:
        args:
        - delete
        - cpol
        - advertise-resource
        - --force
        - --wait=true
        - --ignore-not-found=true
        entrypoint: kubectl
    - script:
        content: ./modify-resource-filters.sh addNode
    - script:
        content: ./clear-modified-node-status.sh
        timeout: 20s
